# llm-redteam-corpus-taxonomy

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  LICENSE  LICENSE-CODE  METHODOLOGY.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  new_dataset.md
.github/workflows/: ci.yml  track_metrics.yml
data/core/: manifest.json  sources.json
data/evidence/: hf_metrics_weekly.jsonl
data/extended/: DATASET_CARD.md  README.md  manifest.json  sources.json
data/full/: DATASET_CARD.md  manifest.json  sources.json
docs/: license_matrix.md
docs/paper/: preprint_draft.md
docs/plan/: 2026-07-02_project-plan-and-review.md
docs/quarterly_reports/: 2026-Q3.md
notebooks/: 01_quickstart.ipynb
scripts/: build_corpus.py  import_all.py  quarterly_update.py  track_hf_metrics.py  verify_checksums.sh
src/redteam_corpus/: __init__.py  pipeline.py
taxonomy/: README.md  cross_mapping.json  owasp_llm_top10.json  source_to_taxonomy.json
tests/: test_pipeline.py  test_taxonomy.py
