[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-redteam-corpus-taxonomy"
version = "0.1.0.dev0"
description = "Living aggregated LLM red-team corpus + cross-framework taxonomy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "rubyglask", email = "rubyglask@gmail.com" }]
keywords = ["llm-security", "red-teaming", "dataset", "owasp-llm-top10", "mitre-atlas"]
dependencies = [
    "datasets>=2.19",
    "pandas>=2.0",
    "pyarrow>=15",
    "duckdb>=0.10",
    "langdetect>=1.0.9",
    "huggingface_hub>=0.23",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8"]

[project.urls]
Homepage = "https://github.com/rubyglask/llm-redteam-corpus-taxonomy"
Dataset = "https://huggingface.co/datasets/rubyglask/llm-redteam-corpus-taxonomy-core"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
